tg-5118 [FE] Se agrega la logica para que el rol ESPECIALISTA_EN_ODONTOLOGIA tenga los mismos permisos que PROFESIONAL_DE_SALUD

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-indicaciones/card-indicaciones.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-indicaciones/card-indicaciones.component.html
@@ -1,6 +1,6 @@
 <app-summary-card id="indicaciones-generales" [header]="indicaciones"
                                             [editable]="true"
-                                            [canEdit]="['ENFERMERO', 'ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']"
+                                            [canEdit]="['ENFERMERO', 'ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']"
                                             (openInNew)="openDialogNewRecommendation()">
                                             <app-no-data></app-no-data>
 </app-summary-card>
