--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-medicaciones/card-medicaciones.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-medicaciones/card-medicaciones.component.html
@@ -104,7 +104,7 @@
                                     <mat-icon>more_vert</mat-icon>
                                 </button>
                                 <mat-menu #menu="matMenu">
-									<ng-container *appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO', 'PROFESIONAL_DE_SALUD']">
+									<ng-container *appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO', 'PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
 										<button mat-menu-item *ngIf="hasRecipe(medicationInfo)" (click)="downloadRecipe(medicationInfo.medicationRequestId)">
 											<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.DOWNLOAD'"></span>
 										</button>
