--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
@@ -44,7 +44,7 @@
 									</div>
 
 									<div fxFlex="5%">
-										<button *appHasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']"
+										<button *appHasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']"
 											mat-icon-button [matMenuTriggerFor]="menu">
 											<mat-icon>more_vert</mat-icon>
 										</button>
@@ -99,7 +99,7 @@
 									</div>
 
 									<div fxFlex="5%">
-										<button *appHasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']"
+										<button *appHasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']"
 											mat-icon-button [matMenuTriggerFor]="menu">
 											<mat-icon>more_vert</mat-icon>
 										</button>
@@ -196,7 +196,7 @@
 											"actualmente internado" }}
 										</span>
 									</div>
-									<button *appHasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO']"
+									<button *appHasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO', 'ESPECIALISTA_EN_ODONTOLOGIA']"
 										mat-icon-button [matMenuTriggerFor]="menu">
 										<mat-icon>more_vert</mat-icon>
 									</button>
