--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/internacion/routes/cambiar-diagnostico-principal/cambiar-diagnostico-principal.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/internacion/routes/cambiar-diagnostico-principal/cambiar-diagnostico-principal.component.html
@@ -140,7 +140,7 @@
 						<span class="uppercase" [translate]="'buttons.BACK'"></span>
 					</button>
 					<button id="sign-confirm" mat-raised-button type="submit" color="primary"
-						*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
+						*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
 						<span class="uppercase" [translate]="'buttons.CONFIRM'"></span>
 					</button>
 				</section>
