--- a/front-end/apps/projects/hospital/src/styles.scss
+++ b/front-end/apps/projects/hospital/src/styles.scss
@@ -47,3 +47,11 @@ section {
 		}
 	}
 }
+
+.dark-theme {
+	@include angular-material-color($dark-theme);
+}
+
+.candy-app-theme {
+	@include angular-material-color($candy-app-theme);
+}
