--- a/front-end/apps/projects/hospital/src/assets/styles/theme.scss
+++ b/front-end/apps/projects/hospital/src/assets/styles/theme.scss
@@ -9,6 +9,32 @@ $accent: mat-palette($accent-palette);
 
 $theme: mat-light-theme($primary, $accent);
 
+$dark-primary: mat-palette($mat-blue-grey);
+$dark-accent: mat-palette($mat-amber, A200, A100, A400);
+$dark-warn: mat-palette($mat-deep-orange);
+$dark-theme: mat-dark-theme(
+  (
+    color: (
+      primary: $dark-primary,
+      accent: $dark-accent,
+      warn: $dark-warn,
+    ),
+  )
+);
+
+$candy-app-primary: mat-palette($mat-red);
+$candy-app-accent: mat-palette($mat-pink, A200, A100, A400);
+$candy-app-warn: mat-palette($mat-green);
+$candy-app-theme: mat-light-theme(
+  (
+    color: (
+      primary: $candy-app-primary,
+      accent: $candy-app-accent,
+      warn: $candy-app-warn,
+    ),
+  )
+);
+
 @include angular-material-theme($theme);
 
 @include mat-nav-list($theme);
