--- a/front-end/apps/projects/hospital/src/assets/styles/mixins.scss
+++ b/front-end/apps/projects/hospital/src/assets/styles/mixins.scss
@@ -1,5 +1,9 @@
 @import "variables";
 
+@import "./../../app/modules/presentation/presentation-mixins.scss";
+@import "./../../app/modules/turnos/turnos-mixins.scss";
+@import "./../../app/modules/historia-clinica/historia-clinica-mixins.scss";
+
 @mixin form-row {
 	display: flex;
 	flex-direction: row;
@@ -57,4 +61,10 @@
 
 @mixin general-font {
 	font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+@mixin custom-components-color($theme) {
+	@include presentation-mixins($theme);
+	@include turnos-mixins($theme);
+	@include historia-clinica-mixins($theme);
 }
