--- a/front-end/apps/projects/hospital/src/assets/styles/theme.scss
+++ b/front-end/apps/projects/hospital/src/assets/styles/theme.scss
@@ -1,6 +1,7 @@
 @import "mat-mixins";
 @import "palettes";
 @import "~@angular/cdk/overlay-prebuilt.css";
+@import "mixins";
 
 @include mat-core();
 
@@ -36,16 +37,5 @@ $candy-app-theme: mat-light-theme(
 );
 
 @include angular-material-theme($theme);
-
-@include mat-nav-list($theme);
-@include mat-selection-list($theme);
-@include mat-table($theme);
-@include mat-card-box($theme);
-@include signos-vitales-box($theme);
-@include detail-box($theme);
-@include mat-dialog($theme);
-@include mat-button($theme);
-@include no-data($theme);
-@include general($theme);
-@include header($theme);
-@include mat-theme-color($theme);
+@include custom-components-color($theme);
+@include material-mixins($theme);
