tg-5152 [FE] Pop-ups utilizan los colores de las paletas

--- a/front-end/apps/projects/hospital/src/app/components/exchangeable-theme/exchangeable-theme.component.html
+++ b/front-end/apps/projects/hospital/src/app/components/exchangeable-theme/exchangeable-theme.component.html
@@ -4,7 +4,7 @@
 	</button>
 	<mat-menu #menu="matMenu">
 		<div *ngFor="let theme of themesOptions">
-			<button mat-menu-item (click)="themeChanged.next(theme)">
+			<button mat-menu-item (click)="setTheme(theme)">
 				<span>{{theme.name}}</span>
 			</button>
 		</div>
