tg-5149 [FE] Odontología - Agrega dibujos relacionados a puente

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth/tooth.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth/tooth.component.html
@@ -59,6 +59,10 @@
 		<path d="M1 56L16.9997 40.0003" stroke="#EB5757" stroke-width="2" />
 		<path d="M9.83691 15H8.11426V5.04688H9.83691V15Z" fill="#EB5757" />
 	</svg>
+	<svg id="red_long_line" width="48" height="2" viewBox="0 0 48 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+		<path d="M0 1L48 1" stroke="#EB5757" stroke-width="2" />
+	</svg>
+
 
 
 </div>
