tg-3416 [P2] [Baja]-Historia clínica  - texto de solapa seleccionada en color celeste

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
@@ -223,7 +223,7 @@
 
 			<mat-tab>
 				<ng-template mat-tab-label>
-					<span class="color-primary tab-label">
+					<span class="tab-label">
 						{{ 'ambulatoria.paciente.problemas.HISTORICAL_HSI_TAB_LABEL' | translate }}
 					</span>
 				</ng-template>
@@ -355,7 +355,7 @@
 			<ng-container *ngIf="this.showExternalClinicalHistoryTab">
 				<mat-tab>
 					<ng-template mat-tab-label>
-						<span class="color-primary tab-label">
+						<span class="tab-label">
 							{{ 'ambulatoria.paciente.problemas.HISTORICAL_EXTERNAL_TAB_LABEL' | translate }}
 						</span>
 					</ng-template>
