--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/dialogs/solve-problem/solve-problem.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/dialogs/solve-problem/solve-problem.component.html
@@ -37,7 +37,7 @@
 				<mat-form-field appearance="outline" >
 					<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.problemas.FECHA_INICIO'"></mat-label>
 					<input matInput id="fecha_inicio" [matDatepicker]="inicioDatePicker" [min]="minDate" [max]="today" formControlName="fechaInicio"
-						   (dateChange)="checkInactivationDate()">
+						   (dateChange)="checkInactivationDate()" [disabled]="dateIsReadOnly">
 					<mat-datepicker-toggle matSuffix [for]="inicioDatePicker"></mat-datepicker-toggle>
 					<mat-datepicker #inicioDatePicker></mat-datepicker>
 				</mat-form-field>
