tg-5166 [FE] [MEJORA] Se debe actualizar la página para visualizar el problema por defecto “Registro de odontograma”

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -96,7 +96,7 @@
 							<span>ODONTOLOGÍA</span>
 						</ng-template>
 						<ng-template matTabContent>
-							<app-odontogram></app-odontogram>
+							<app-odontogram (consultationCompleted)="updateFields($event)"></app-odontogram>
 						</ng-template>
 					</mat-tab>
 
