tg-5204 Error cuando se quiere realizar una consulta/consulta odontológica sin especialidad
(cherry picked from commit 339f41630e7da21ac7d6ea73abf488bd5c119bf1)

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
@@ -14,6 +14,7 @@
 									{{clinicalSpecialty.name}}
 								</mat-option>
 							</mat-select>
+							<mat-error *ngIf="hasError(form, 'required', 'clinicalSpecialty')" [translate]="'forms.REQUIRED'"></mat-error>
 						</mat-form-field>
 					</form>
 				</ng-container>
