--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/ambulatoria-mixins.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/ambulatoria-mixins.scss
@@ -1,5 +1,7 @@
 @import "./components/vacunas/vacunas.component.scss-theme.scss";
+@import "./dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss-theme.scss";
 
 @mixin ambulatoria-mixins($theme) {
     @include app-vacunas($theme);
+	@include app-nueva-consulta-dock-popup($theme);
 }
