--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
@@ -46,3 +46,35 @@ mat-form-field {
 	font-size: 13px;
 	font-weight: lighter;
 }
+
+.dialog {
+	display: flex;
+}
+
+.icon{
+	padding: 20px 0px 20px 10px;
+}
+
+.info-text{
+	flex-direction: column;
+	font-family: Roboto;
+	font-size: 14px;
+	padding: 20px 10px 20px 16px;
+	.text{
+		padding: 0px 0px 0px 0px;
+		 text-align:right;
+
+	}
+	.question {
+		display: block;
+		font-weight: 500;
+	}
+	.button{
+		padding: 0px 16px 0px 0px;
+		font-size: 16px;
+	}
+}
+
+.field-icon{
+	padding: 0px 15px 20px 5px;
+}
