tg-5237 [BE] Agrega datos de consultas de enfermería en histórico de evoluciones

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
@@ -275,7 +275,7 @@
 																{{historicalProblem.specialityPt}}</div>
 														</div>
 
-														<div *ngIf="historicalProblem.consultationReasons.length">
+														<div *ngIf="historicalProblem.consultationReasons?.length">
 															<div class="mat-body-strong"
 																[translate]="'ambulatoria.paciente.problemas.historical-problems.REASONS'">
 															</div>
