tg-5267 [FE] Se agrega que cuando se cierre el dialogo desde la cruz, se vuelva al estado anterior donde define el problema.

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/epidemiological-report/epidemiological-report.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/epidemiological-report/epidemiological-report.component.html
@@ -21,7 +21,7 @@
             <span
                 [translate]="'ambulatoria.paciente.problemas.epidemiological_report.buttons.CANCEL_REPORT'"></span>
         </button>
-        <button class="close" type="button" mat-dialog-close mat-icon-button matSuffix fxLayout="column">
+        <button class="close" type="button" mat-icon-button matSuffix fxLayout="column" (click)="goBack()">
             <mat-icon>close</mat-icon>
         </button>
     </mat-dialog-actions>
